namespace Scenes.SampleShooting.Character
{
    public interface IBulletConstractable
    {
        public void Constructor(ObjectPool.ObjectPool playerBulletPool);
    }
}